[package]
name = "inspire_hep_rss"
version = "0.1.2"
edition = "2021"
license-file = "LICENSE"
description = "Rust RSS server that queries the InspireHEP API"
homepage = "https://github.com/APN-Pucky/inspire_hep_rss"
repository = "https://github.com/APN-Pucky/inspire_hep_rss"
readme = "README.md"
exclude = [
	".github/",
	"img/",
]


[dependencies]
axum = "0.6"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
rss = "2.0"
serde_urlencoded = "0.7"
chrono = "0.4"
structopt = "0.3"
structopt-derive = "0.4"
